log
Thu 09 May 2024 06:43:08 PM UTC: 
 tests:  1|8
total_score: 0/70
3fd5fbd
Thu 09 May 2024 06:45:21 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6e85a24
Thu 09 May 2024 06:51:03 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
520e1cf
